# rofl-core

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES  Makefile.am  README  autogen.sh  configure.ac  index.html
doc/: .gitignore  Makefile.am  doxyfile-afa.conf.in  doxyfile-common.conf.in  doxyfile-hal.conf.in  doxyfile-pipeline.conf  doxyfile-pipeline.conf.in  doxyfile.conf  doxyfile.conf.in
examples/etherswitch/: Makefile.am  cfib.cc  cfib.h  cfibentry.cc  cfibentry.h  etherswitch.cc  etherswitch.h  main.cc
examples/ethswctld/: Makefile.am  cetherswitch.cc  cetherswitch.h  cfib.cc  cfib.h  cfibentry.cc  cfibentry.h  cfibtable.cc  cfibtable.h  cflowentry.cc  cflowentry.h  cflowtable.cc  cflowtable.h  etherswitch.cc  etherswitch.h  ethswctld.cc
examples/pex_controller/: Makefile.am  cfib.cc  cfibentry.h  etherswitch.cc  etherswitch.h  ethswctld.cc
examples/tranny/: Makefile.am  cmessagetranslator.h  cportvlan_mapper.cc  cportvlan_mapper.h  cportvlan_messagetranslator.cc  cportvlan_messagetranslator.h  csh_aggregate_stats.cc  csh_aggregate_stats.h  csh_barrier.cc  csh_barrier.h  csh_desc_stats.cc  csh_desc_stats.h  csh_features_request.cc  csh_features_request.h  csh_flow_mod.cc  csh_flow_mod.h  csh_flow_stats.cc  csh_flow_stats.h  csh_get_config.cc  csh_get_config.h  csh_packet_in.cc  csh_packet_in.h  csh_packet_out.cc  csh_packet_out.h  csh_port_mod.cc  csh_port_mod.h  csh_set_config.cc  csh_set_config.h  csh_table_mod.cc  csh_table_mod.h  csh_table_stats.cc  csh_table_stats.h  jsp.notes.txt  jsptest1.cc  main.cc  morpheus.cc  morpheus.h  morpheus_main.cc  morpheus_nested.cc  morpheus_nested.h  (+6 more)
examples/tranny/testing/: OLT0_vDIN1_0.cfg  createOLT_ONU_config.sh  startONUxterms.sh
src/rofl/: Makefile.am  rofl.h  rofl.pc.in
src/rofl/common/: .doxygen.dox  .groups.dox  Makefile.am  cadapt.cc  cadapt.h  caddress.cc  caddress.h  caddressinfo.cc  caddressinfo.h  caddrinfo.cc  caddrinfo.h  caddrinfos.cc  caddrinfos.h  cauxid.h  cclock.cc  cclock.h  cctlelem.cc  cctlelem.h  cctlid.h  cdpid.h  cdptid.h  cerror.cc  cerror.h  cevent.h  cevents.cc  cevents.h  cfdset.cc  cfdset.h  cfibentry.cc  cfibentry.h  cflowentry.cc  cflowentry.h  cfsm.cc  cfsm.h  cfwdelem.cc  cfwdelem.h  cfwdentry.cc  cfwdentry.h  cfwdtable.cc  cfwdtable.h  (+106 more)
src/rofl/common/config/: Makefile.am  ccli.cc  cconfigsyslog.cc  cconfigsyslog.h
src/rofl/common/controller/: Makefile.am  cadapt.cc  cadapt.h  cfibentry.h  cftentry.cc  cftentry.h  cfttable.cc  cfttable.h  cfwdelem.cc  cfwdelem.h  cfwdentry.h  cfwdtable.h  cgtentry.cc  cgtentry.h  cgttable.h  ctlbase.cc  ctlbase.h
src/rofl/common/experimental/: Makefile.am
src/rofl/common/openflow/: Makefile.am  cflowentry.cc  cflowentry.h  cftentry.cc  cftentry.h  cfttable.cc  cfttable.h  cgroupentry.cc  cgroupentry.h  cgtentry.cc  cgtentry.h  cgttable.cc  cgttable.h  cofaclist.cc  cofaclist.h  cofaction.cc  cofaction.h  cofactions.cc  cofactions.h  cofactionset.cc  cofactionset.h  cofaggrstats.cc  cofaggrstats.h  cofasyncconfig.cc  cofasyncconfig.h  cofbase.cc  cofbase.h  cofbclist.cc  cofbclist.h  cofbucket.cc  cofbucket.h  cofbucketcounter.cc  cofbucketcounter.h  cofbucketcounters.cc  cofbucketcounters.h  cofbuckets.cc  cofbuckets.h  cofctl.cc  cofctl.h  cofctlImpl.cc  (+199 more)
src/rofl/common/protocols/: Makefile.am  clldpattr.cc  clldpattr.h  clldpattrs.cc  clldpattrs.h  clldplist.cc  clldplist.h  clldpmsg.cc  clldpmsg.h  clldptlv.cc  clldptlv.h  coflist.cc  coflist.h  cpppoelist.cc  cpppoelist.h  cpppoetlv.cc  cpppoetlv.h  farpv4frame.cc  farpv4frame.h  fcapwapframe.cc  fcapwapframe.h  fetherframe.cc  fetherframe.h  fgtpuframe.cc  fgtpuframe.h  fgtpuv1frame.cc  fgtpuv1frame.h  ficmpv4frame.cc  ficmpv4frame.h  ficmpv6frame.cc  ficmpv6frame.h  fieee80211frame.cc  fieee80211frame.h  fipv4frame.cc  fipv4frame.h  fipv6frame.cc  fipv6frame.h  fl2tpv3frame.cc  fl2tpv3frame.h  flldpframe.cc  (+18 more)
src/rofl/common/utils/: Makefile.am  c_logger.c  c_logger.h
src/rofl/config/: Makefile.am  ccli.cc  ccli.h  cconfigfwdelem.cc  cconfigfwdelem.h  cconfigport.cc  cconfigport.h  cconfigsyslog.cc  cconfigsyslog.h
src/rofl/control/: Makefile.am  cadapt.cc  cadapt.h  cfibentry.h  cftentry.cc  cftentry.h  cfttable.cc  cfttable.h  cfwdelem.cc  cfwdelem.h  cfwdentry.cc  cfwdentry.h  cfwdtable.h  cgtentry.cc  cgtentry.h  cgttable.cc  cgttable.h  ctlbase.cc  ctlbase.h
src/rofl/controller/: Makefile.am  diff_output
src/rofl/controller/config/: Makefile.am  ccli.cc
src/rofl/controller/control/: Makefile.am  cfibentry.cc  cfibentry.h  cftentry.cc  (+14 more)
src/rofl/datapath/: Makefile.am
src/rofl/experimental/: Makefile.am  cgraph.cc  cgraph.h  cofipv4port.cc  cofipv4port.h  crib.cc  crib.h
src/rofl/pipeline/: Makefile.am  physical_switch.c  physical_switch.h  switch_port.c  switch_port.h
src/rofl/platform/: Makefile.am
src/rofl/translator/: README
test/rofl/common/: Makefile.am  caddress_test.cc  caddress_test.h  caddrinfo_test.cc  caddrinfo_test.h  caddrinfos_test.cc  caddrinfos_test.h  cpacket_test.cc  cpacket_test.h  cparam_test.cc  cparam_test.h  cparams_test.cc  cparams_test.h  csegmsg_test.cc  csegmsg_test.h  csockaddr_test.cc  csockaddr_test.h  csocket_test.cc  csocket_test.h  ctimerid_test.cc  ctimerid_test.h  ctimespec_test.cc  ctimespec_test.h
test/unit/: Makefile.am  cmemorytest.cc  cmemorytest.h  cofhelloelemstest.cc  cofhelloelemstest.h  cofhelloelemversionbitmaptest.h  coxmatchtest.cc  coxmatchtest.h  coxmlisttest.cc  coxmlisttest.h  crofbasetest.cc  crofbasetest.cc.rej  crofbasetest.h  crofconntest.cc  crofconntest.h  ficmpv6frametest.cc  ficmpv6frametest.h  fipv6frametest.cc  fipv6frametest.h  fl2tpv3frametest.cc  fl2tpv3frametest.h  unittest.cc
test/unit/cclock/: Makefile.am  cclock_test.cc
test/unit/cmemory/: .gitignore  Makefile.am  memory.cc
test/unit/cpacket/: Makefile.am  packet.cc
test/unit/croflexp/: .gitignore  Makefile.am  croflexp_test.cc
test/unit/fipv6frame/: Makefile.am  fipv6frametest.cc  fipv6frametest.h  ipv6frame.cc
test/unit/frames/: Makefile.am  checksums.cc  frames.cc
test/unit/test1/: .gitignore  Makefile.am  test1.cc
(+6419 files in other folders)
