MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libconfig.la

library_includedir=$(includedir)/rofl/config
library_include_HEADERS= ccli.h  cconfigfwdelem.h  cconfigport.h 


libconfig_la_SOURCES = ccli.cc ccli.h cconfigfwdelem.cc cconfigfwdelem.h cconfigport.cc cconfigport.h
libconfig_la_LIBADD = -lcli

