MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libroflctl.la

libroflctl_la_SOURCES = cadapt.h  cfibentry.h  cfwdelem.h  cfwdentry.h  cfwdtable.h  ctlbase.h cfttable.h cgttable.h cftentry.h cgtentry.h \
			  cadapt.cc cfibentry.cc cfwdelem.cc cfwdentry.cc cfwdtable.cc ctlbase.cc cfttable.cc cgttable.cc cftentry.cc cgtentry.cc


library_includedir=$(includedir)/rofl/common/controller $(includedir)/rofl/common
library_include_HEADERS = cadapt.h  cfibentry.h  cfwdelem.h  cfwdentry.h cfwdtable.h  ctlbase.h  cfttable.h  cgttable.h  cftentry.h  cgtentry.h 
